<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eff2f6"
              android:orientation="vertical">

    <include layout="@layout/common_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                >

                <RelativeLayout
                    android:id="@+id/user_profile_avatarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    >

                    <ImageView
                        android:id="@+id/user_profile_ivAvatar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="15dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/default_hd_avatar"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:gravity="center_vertical"
                        android:text="@string/userinfo_txt_avatar"
                        android:textColor="@color/black2"
                        android:textSize="18sp"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color"
                    />

                <RelativeLayout
                    android:id="@+id/user_profile_nickLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/nickname"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/user_profile_tvNick"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/nickname"
                        android:textColor="@color/line_color"
                        android:textSize="18sp"
                        />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color"
                    />

                <RelativeLayout
                    android:id="@+id/user_profile_account"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/wu_nuo"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/user_profile_tvAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/official_accounts"
                        android:textColor="@color/line_color"
                        android:textSize="18sp"
                        />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/userinfo_txt_qrcode"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/qr_code"
                        />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:text="@string/userinfo_txt_address"
                    android:textColor="@color/black2"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/userinfo_txt_sex"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="男"
                        android:textColor="@color/line_color"
                        android:textSize="18sp"
                        />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/userinfo_txt_area"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="辽宁 鞍山"
                        android:textColor="@color/line_color"
                        android:textSize="18sp"
                        />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="个性签名"
                        android:textColor="@color/black2"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:text="我们终究会是怎样"
                        android:textColor="@color/line_color"
                        android:textSize="18sp"
                        />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
